# HumanEmotionRecognition-MachineLearning

./: Untitled1.ipynb  Uploading_Pics_in_dataset.ipynb  main.ipynb  main.py
PyQt5_gpl-5.13.1/: ChangeLog  NEWS  configure.py  project.py  pyproject.toml
PyQt5_gpl-5.13.1/qpy/QtCore/: qpycore_public_api.cpp
PyQt5_gpl-5.13.1/sip/QtCore/: qglobal.sip
code/: CaptureVideo.py  Classification.py  showPics.py  ui.py
sip-4.19.19/: Makefile  installed.txt  sipconfig.py
sip-4.19.19/doc/html/: annotations.html  build_system.html  c_api.html  command_line.html  directives.html  distutils.html  embedding.html  genindex.html  incompatibilities.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  python_api.html  search.html  searchindex.js  specification_files.html  using.html
sip-4.19.19/doc/html/_static/: documentation_options.js
sip-4.19.19/sipgen/: Makefile  lexer.c  parser.c  parser.h  sip
sip-4.19.19/siplib/: Makefile
