# Specify PyQt-build v1.0 as the build system for the package.
[build-system]
#requires = ["PyQt-build >=1, <2"]
requires = ["PyQt-build >=0.1.0, <1"]
build-backend = "sipbuild.api"

# Specify the PEP 522 metadata for the project.
[tool.sip.metadata]
name = "PyQt5"
version = "5.13.1"
summary = "Python bindings for the Qt cross platform application toolkit"
home-page = "https://www.riverbankcomputing.com/software/pyqt/"
author = "Riverbank Computing Limited"
author-email = "info@riverbankcomputing.com"
license = "GPL v3"
description-file = "README"
